// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleForm /> renders properly 1`] = `
<form
  class="articleform__form"
  onSubmit={undefined}
>
  <input
    autocomplete="off"
    class="articleform__title"
    id="article-form-title"
    onChange={[Function]}
    placeholder="title"
    type="text"
    value=""
  />
  <div
    class="articleform__detailfields"
  >
    <div
      class="articleform__tagswrapper"
    >
      <textarea
        class="articleform__tags"
        id="tag-input"
        onBlur={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder="tags"
        type="text"
        value=""
      />
    </div>
    <button
      class="articleform__imageButton"
      onClick={[Function]}
    >
      <img
        src=""
      />
       IMAGES
    </button>
  </div>
  <textarea
    class="articleform__body"
    id="article_body_markdown"
    name="body_markdown"
    onChange={[Function]}
    placeholder="Body"
    ref={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
    value=""
  />
  <div
    class="articleform__buttons"
  >
    <button
      class="inactive"
      onClick={[Function]}
    >
      HELP
    </button>
    <button
      class="inactive"
      onClick={[Function]}
    >
      PREVIEW
    </button>
    <button
      onClick={[Function]}
    >
      SAVE DRAFT
    </button>
    <button
      onClick={[Function]}
    >
      PUBLISH
    </button>
  </div>
</form>
`;

exports[`<ArticleForm /> selects tag when you click on it 1`] = `
Object {
  "bodyMarkdown": "",
  "description": "",
  "editing": false,
  "errors": null,
  "helpHTML": "",
  "helpShowing": false,
  "id": null,
  "imageManagementShowing": false,
  "mainImageUrl": null,
  "organization": null,
  "postUnderOrg": false,
  "previewHTML": "",
  "previewShowing": false,
  "published": false,
  "selectedTags": Array [
    "git",
    "",
  ],
  "submitting": false,
  "tagInputListIndex": -1,
  "tagList": "git,",
  "tagOptions": Array [],
  "title": "",
}
`;

exports[`<ArticleForm /> selects tag when you type a comma 1`] = `
Object {
  "bodyMarkdown": "",
  "description": "",
  "editing": false,
  "errors": null,
  "helpHTML": "",
  "helpShowing": false,
  "id": null,
  "imageManagementShowing": false,
  "mainImageUrl": null,
  "organization": null,
  "postUnderOrg": false,
  "previewHTML": "",
  "previewShowing": false,
  "published": false,
  "selectedTags": Array [
    "git",
    "",
  ],
  "submitting": false,
  "tagInputListIndex": -1,
  "tagList": "git,",
  "tagOptions": Array [],
  "title": "",
}
`;

exports[`<ArticleForm /> shows tags as you search 1`] = `
Object {
  "bodyMarkdown": "",
  "description": "",
  "editing": false,
  "errors": null,
  "helpHTML": "",
  "helpShowing": false,
  "id": null,
  "imageManagementShowing": false,
  "mainImageUrl": null,
  "organization": null,
  "postUnderOrg": false,
  "previewHTML": "",
  "previewShowing": false,
  "published": false,
  "selectedTags": Array [],
  "submitting": false,
  "tagInputListIndex": -1,
  "tagList": "git",
  "tagOptions": Array [
    Object {
      "_highlightResult": Object {
        "bg_color_hex": Object {
          "matchLevel": "none",
          "matchedWords": Array [],
          "value": "#888751",
        },
        "name": Object {
          "fullyHighlighted": false,
          "matchLevel": "full",
          "matchedWords": Array [
            "gi",
          ],
          "value": "<em>gi</em>t",
        },
        "text_color_hex": Object {
          "matchLevel": "none",
          "matchedWords": Array [],
          "value": "#56c938",
        },
      },
      "bg_color_hex": "#888751",
      "hotness_score": 0,
      "name": "git",
      "objectID": "4",
      "supported": true,
      "text_color_hex": "#56c938",
    },
  ],
  "title": "",
}
`;
